# Underdog-Devs

./: .coverage  .gitignore  Chris_Keim_Wordplay_Program_Readiness_Problems.ipynb  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  unittest.cfg
.github/ISSUE_TEMPLATE/: user-story.md
.github/workflows/: cicd.yaml
BB-Names/tests/: test_bb.py
BB_Names/solutions/: data_structure_runtime_suite.py  get_backwards_valid_scrabble.py  get_longest_in_top_40.py  get_shortest_in_top_40.py  get_top_40_in_both.py
BB_Names/tests/: test_bb.py
BB_Names/utils/: load_data.py  search_reverse_matches.py
Bigger_Wordplay/solutions/: charleys_filter_function.py  get_8_letters_3_unique_or_fewer.py  get_all_compound_words.go  get_all_compound_words.py  get_alphabet_chains.py  get_double_letters.py  get_longest_ascending_alpha_chains.py  get_longest_word_only_single_letters.py  get_vowel_chains.py  get_words_from_avail_letters.py  zev_apha_chain.py
Billboard/solutions/: get_artists_with_most_songs.py  get_number_1_song_for_most_weeks.py  get_number_1_songs_and_artists.py  get_songs_on_chart_most_weeks.py
Countries/Solutions/: solutions.py
Countries/solutions/: get_begin_end_vowel.py  get_country_in_country.py  get_gt_50_percent_vowel.py  get_only_one_vowel.py  get_shortest_name.py  get_united.py
Countries/tests/: test_solutions.py
Interview/solutions/: boggle_solver.py  calculate_flood_area.py  check_brackets.go  check_brackets.py  count_moats.py  count_ships.py  postfix_notation_calculator.py  (+6 more)
Wordplay/: Chris_Keim_Wordplay_Program_Readiness_Problems.ipynb
(+35 files in other folders)
