[tool.poetry]
name = "Underdog-Devs"
version = "0.1.0"
description = ""
authors = ["Chris"]
readme = "README.md"
packages = [{ include = "Wordplay" },
            { include = "Countries" }]

[tool.poetry.dependencies]
python = ">=3.9, <3.9.7 || >3.9.7, <3.10"

# devops
black = "^22.3.0"
click = "^8.1.3"
nose2 = "^0.13.0"
ruff = "^0.0.285"
boto3 = "^1.24.87"

# web
# data science
jupyter = "^1.0.0"
pandas = "^1.5.0"
numpy = "^1.23.3"
scikit-learn = "^1.1.2"
matplotlib = "^3.6.0"
seaborn = "^0.12.0"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
